--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     script(src = 'http://code.jquery.com/jquery-3.1.1.min.js')
-    script(src = '/javascripts/main.js')
+    script(src = '/javascripts/view.js')
 body
   block content
