--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
-    script(src = 'http://code.jquery.com/jquery-3.1.1.min.js')
+    script(src = 'https://code.jquery.com/jquery-3.1.1.min.js')
     script(src = '/javascripts/view.js')
 body
   block content
