--- a/views/search.jade
+++ b/views/search.jade
@@ -1,7 +1,7 @@
 extends layout
 block content
     a(href='/')
-        button.btn-block Search Again
+        button.btn.btn-success.btn-large.text-center Search Again
     div.container.text-center
         h1= title + ' for ' + day
         table.table.table-striped
