--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,8 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='https://bootswatch.com/2/cerulean/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     script(src = 'https://code.jquery.com/jquery-3.1.1.min.js')
     script(src = '/javascripts/view.js')
 body
