--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href='https://bootswatch.com/2/cerulean/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src = 'https://code.jquery.com/jquery-3.1.1.min.js')
